fix: further spacing fixes

--- a/packages/hero/src/scss/_custom-properties.scss
+++ b/packages/hero/src/scss/_custom-properties.scss
@@ -5,7 +5,7 @@
   --hero-font-size-xxxxl: #{core.$font-size-xxxxl};
 
   --hero-gap: #{core.$space-ul};
-  --hero-spacing: #{core.$space-uul};
+  --hero-spacing: #{core.$space-ul};
   --hero-basic-spacing: #{core.$space-uuul};
 
   --hero-aspect-ratio: 2.35 / 1;
